UI changes and generic cell button register